fixed z-index in sidebar

--- a/style/media.scss
+++ b/style/media.scss
@@ -19,7 +19,7 @@
     .sidebar {
         display: flex !important;
     }
-    .nav-menu {
+    .nav-menu-open, .nav-menu-close {
         display: block !important;
     }
 }
